# partiql-lang-rust

./: Cargo.toml  bitbucket-pipelines.yml  renovate.json
docs/adr/: ADR-001-aggregate-pushdown-traits.md  ADR-002-winnow-parser-migration.md  ADR-003-pratt-parser-expression-engine.md
docs/adr/custom-functions/: ADR-004-current-timestamp-function.md  ADR-005-current-time-function.md  ADR-006-to-string-function.md  ADR-007-unix-timestamp-function.md
extension/partiql-extension-csv/: Cargo.toml
extension/partiql-extension-csv/tests/: scan.rs
extension/partiql-extension-ddl/: Cargo.toml
extension/partiql-extension-ion/: Cargo.toml
extension/partiql-extension-ion-functions/: Cargo.toml
extension/partiql-extension-ion-functions/tests/: scan.rs
extension/partiql-extension-ion/src/: decode.rs
extension/partiql-extension-ion/tests/: test.rs
extension/partiql-extension-value-functions/: Cargo.toml
extension/partiql-extension-visualize/: Cargo.toml
partiql/: Cargo.toml
partiql-ast/: Cargo.toml
partiql-ast-passes/: Cargo.toml
partiql-ast/partiql-ast-macros/: Cargo.toml
partiql-ast/src/: visit.rs
partiql-ast/src/ast/: mod.rs
partiql-catalog/: Cargo.toml
partiql-common/: Cargo.toml
partiql-conformance-test-generator/: Cargo.toml
partiql-conformance-tests/: Cargo.toml
partiql-conformance-tests/tests/: mod.rs
partiql-eval/: Cargo.toml
partiql-eval/src/: plan.rs  test_value.rs
partiql-eval/src/eval/: bindings_scan.rs  coll_count.rs  evaluable.rs  mod.rs
partiql-eval/src/eval/expr/: coll.rs  datetime_functions.rs  mod.rs  path.rs  to_string.rs
partiql-eval/src/eval/graph/simple_graph/: engine.rs
partiql-logical/: Cargo.toml
partiql-logical-planner/: Cargo.toml
partiql-logical-planner/src/: builtins.rs  datetime_functions.rs  lib.rs  lower.rs  typer.rs
partiql-logical/src/: lib.rs
partiql-parser/: Cargo.toml
partiql-parser/fuzz/: Cargo.toml
partiql-types/: Cargo.toml
partiql-value/: Cargo.toml
partiql-value/src/: bag.rs  graph.rs  tuple.rs
partiql-winnow-parser/: BENCHMARK.md  Cargo.toml
partiql-winnow-parser/src/: identifier.rs  keyword.rs  lib.rs  literal.rs  parse_context.rs  parsed_dql.rs  parsed_select.rs  parser.rs  whitespace.rs
partiql-winnow-parser/src/dml/: delete_strategy.rs  insert_strategy.rs  mod.rs  on_conflict.rs  parsed_dml.rs  replace_strategy.rs  update_strategy.rs  upsert_strategy.rs
partiql-winnow-parser/src/dql/: from_clause.rs  group_by_clause.rs  having_clause.rs  limit_offset_clause.rs  mod.rs  order_by_clause.rs  projection_clause.rs  select_parser.rs  where_clause.rs
partiql-winnow-parser/src/dql/join/: comma_join.rs  cross_join.rs  full_join.rs  inner_join.rs  left_join.rs  right_join.rs
partiql-winnow-parser/src/expr/: add_sub_strategy.rs  and_strategy.rs  comparison_strategy.rs  mod.rs  mul_div_strategy.rs  not_strategy.rs  or_strategy.rs  postfix_strategy.rs  pratt.rs  primary_strategy.rs  unary_strategy.rs
partiql-winnow-parser/src/expr/comparison/: between_parser.rs  in_parser.rs  is_parser.rs  like_parser.rs  mod.rs
partiql-winnow-parser/src/literal/: bag_strategy.rs  boolean_strategy.rs  case_strategy.rs  ion_null.rs  ion_timestamp.rs  list_strategy.rs  mod.rs  null_strategy.rs  number_strategy.rs  string_strategy.rs  struct_strategy.rs
partiql-winnow-parser/src/literal/ion/: annotation.rs  blob.rs  mod.rs  number.rs  string.rs  timestamp.rs
partiql-winnow-parser/src/select/: from_clause.rs  group_by_clause.rs  having_clause.rs  limit_offset_clause.rs  mod.rs  order_by_clause.rs  projection_clause.rs  select_parser.rs  where_clause.rs
partiql-winnow-parser/src/select/join/: comma_join.rs  cross_join.rs  full_join.rs  inner_join.rs  left_join.rs  mod.rs  right_join.rs
partiql-winnow-parser/tests/: parity.rs
