[package]
name = "partiql-ast-passes"
description = "A crate for PartiQL AST transformation passes"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "compilers", "visitors", "passes"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
partiql-ast = { path = "../partiql-ast", version = "0.14.0-nxp" }
partiql-catalog = { path = "../partiql-catalog", version = "0.14.0-nxp" }
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }

fnv = "1.0.7"
indexmap = "2.12.1"
thiserror = "2.0.17"

[dev-dependencies]

[features]
default = []
