[package]
name = "partiql-catalog"
description = "PartiQL Catalog Definitions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }
partiql-value = { path = "../partiql-value", version = "0.14.0-nxp" }
partiql-logical = { path = "../partiql-logical", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }

thiserror = "2.0.18"
ordered-float = "5.1.0"
itertools = "0.14"
unicase = "2.8.1"
rustc-hash = "2.1.1"
delegate = "0.13.5"
dyn-clone = "1.0.20"
