[package]
name = "partiql-eval"
description = "PartiQL Expression Evaluator"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }
partiql-logical = { path = "../partiql-logical", version = "0.14.0-nxp" }
partiql-value = { path = "../partiql-value", version = "0.14.0-nxp" }
partiql-catalog = { path = "../partiql-catalog", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }
partiql-extension-ion = { path = "../extension/partiql-extension-ion", version = "0.14.0-nxp" }
ion-rs_old = { version = "0.18.1", package = "ion-rs" }
lasso = "0.7.3"
petgraph = "0.8.3"
indexmap = "2.12.1"
ordered-float = "5.1.0"
itertools = "0.14"
smallvec = "1.15.1"
unicase = "2.8.1"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.39.0"
thiserror = "2.0.18"
assert_matches = "1.5.0"
regex = "1.12.3"
regex-syntax = "0.8.9"
rustc-hash = "2.1.1"
delegate = "0.13.5"
chrono = { version = "0.4.43", default-features = false, features = ["alloc"] }
time = { version = "0.3.47", features = ["macros"] }

serde = { version = "1.0.228", features = ["derive"], optional = true }
once_cell = "1.21.3"

[dev-dependencies]
criterion = "0.8.2"
partiql-parser = { path = "../partiql-parser", version = "0.14.0-nxp" }
partiql-logical-planner = { path = "../partiql-logical-planner", version = "0.14.0-nxp" }


[features]
default = []
serde = [
    "dep:serde",
    "partiql-common/serde",
    "partiql-logical/serde",
    "partiql-value/serde",
    "partiql-extension-ion/serde",
    "rust_decimal/serde-with-str",
]

[[bench]]
name = "bench_eval"
harness = false
