[package]
name = "partiql-logical-planner"
description = "PartiQL Logical Planner"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-ast = { path = "../partiql-ast", version = "0.14.0-nxp" }
partiql-ast-passes = { path = "../partiql-ast-passes", version = "0.14.0-nxp" }
partiql-catalog = { path = "../partiql-catalog", version = "0.14.0-nxp" }
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }
partiql-logical = { path = "../partiql-logical", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }
partiql-value = { path = "../partiql-value", version = "0.14.0-nxp" }

ordered-float = "5.1.0"
itertools = "0.14"
unicase = "2.8.1"
indexmap = "2.12.1"
petgraph = "0.8.3"
num = "0.4.3"
fnv = "1.0.7"
assert_matches = "1.5.0"
once_cell = "1.21.4"
thiserror = "2.0.18"
rustc-hash = "2.1.2"

[dev-dependencies]
#partiql-eval = { path = "../partiql-eval", version = "0.12.*" }
partiql-parser = { path = "../partiql-parser", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }
