[package]
name = "partiql-logical"
description = "PartiQL Logical Model"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../partiql-value", version = "0.14.0-nxp" }
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }

ion-rs_old = { version = "0.18.1", package = "ion-rs" }
ordered-float = "5.1.0"
itertools = "0.14"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.39.0"
unicase = "2.8.1"
thiserror = "2.0.18"
rustc-hash = "2.1.2"

serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
serde = [
    "dep:serde",
    "partiql-common/serde",
    "partiql-value/serde",
    "ordered-float/serde",
]
