[package]
name = "partiql-value"
description = "PartiQL Values"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.14.0-nxp" }
partiql-types = { path = "../partiql-types", version = "0.14.0-nxp" }
lasso = "0.7.3"
delegate = "0.13.5"
ordered-float = "5.1.0"
itertools = "0.14"
unicase = "2.8.1"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.39.0"
thiserror = "2.0.18"

time = { version = "0.3.45", features = ["macros"] }
pretty = "0.12.5"

serde = { version = "1.0.228", features = ["derive"], optional = true }
typetag = { version = "0.2.21", optional = true }



dyn-clone = "1.0.20"
dyn-hash = "1.0.0"

[dev-dependencies]

[features]
default = []
serde = [
    "dep:serde",
    "dep:typetag",
    "time/serde",
    "rust_decimal/serde-with-str",
    "rust_decimal/serde",
    "ordered-float/serde"
]
