[package]
name = "partiql-extension-csv"
description = "PartiQL CSV extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "csv"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../../partiql-value", version = "0.14.0-nxp" }
partiql-catalog = { path = "../../partiql-catalog", version = "0.14.0-nxp" }
partiql-logical = { path = "../../partiql-logical", version = "0.14.0-nxp" }

csv = "1.0.7"

ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
ion-rs_old = { version = "0.18.1", package = "ion-rs" }
ion-rs = { version = "1.0.0-rc.11", features = ["experimental"] }
time = { version = "0.3.44", features = ["macros"] }
once_cell = "1.0.2"
regex = "1.10.6"
thiserror = "1.0.69"
delegate = "0.13.4"

[dev-dependencies]
partiql-parser = { path = "../../partiql-parser", version = "0.14.0-nxp" }
partiql-logical = { path = "../../partiql-logical", version = "0.14.0-nxp" }
partiql-logical-planner = { path = "../../partiql-logical-planner", version = "0.14.0-nxp" }
partiql-eval = { path = "../../partiql-eval", version = "0.14.0-nxp" }

insta = "1"

[features]
default = []
