[package]
name = "partiql-extension-csv"
description = "PartiQL CSV extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "csv"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../../partiql-value", version = "0.14.0-nxp" }
partiql-catalog = { path = "../../partiql-catalog", version = "0.14.0-nxp" }
partiql-logical = { path = "../../partiql-logical", version = "0.14.0-nxp" }

csv = "1.4.0"

ordered-float = "5.1.0"
itertools = "0.14"
unicase = "2.8.1"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
ion-rs_old = { version = "0.18.1", package = "ion-rs" }
ion-rs = { version = "1.0.0-rc.11", features = ["experimental"] }
time = { version = "0.3.44", features = ["macros"] }
once_cell = "1.21.3"
regex = "1.12.2"
thiserror = "2.0.17"
delegate = "0.13.5"

[dev-dependencies]
partiql-parser = { path = "../../partiql-parser", version = "0.14.0-nxp" }
partiql-logical = { path = "../../partiql-logical", version = "0.14.0-nxp" }
partiql-logical-planner = { path = "../../partiql-logical-planner", version = "0.14.0-nxp" }
partiql-eval = { path = "../../partiql-eval", version = "0.14.0-nxp" }

insta = "1.44.1"

[features]
default = []
