[package]
name = "partiql-extension-ion"
description = "PartiQL Ion extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../../partiql-value", version = "0.14.0-nxp" }
partiql-common = { path = "../../partiql-common", version = "0.14.0-nxp" }
partiql-types = { path = "../../partiql-types", version = "0.14.0-nxp" }

serde = { version = "1.0.228", features = ["derive"], optional = true }
typetag = { version = "0.2.21", optional = true }

ordered-float = "5.1.0"
itertools = "0.14"
unicase = "2.8.1"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.39.0"
ion-rs_old = { version = "0.18.1", package = "ion-rs" }
ion-rs = { version = "1.0.0-rc.11", features = ["experimental", "experimental-ion-hash", "sha2"] }

time = { version = "0.3.44", features = ["macros"] }
once_cell = "1.21.3"
regex = "1.12.2"
thiserror = "2.0.17"
delegate = "0.13.5"
peekmore = "1.3"

[dev-dependencies]
insta = "1.44.3"
walkdir = "2.5"

[features]
default = []
serde = [
    "dep:serde",
    "dep:typetag",
    "partiql-value/serde",
    "partiql-common/serde"
]
